fix: обновлён build-portable.ps1 с русскими комментариями